Updated users collection to 7 fields
